// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile Component When provided with no info Should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Zipcode />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <WithStyles(Snackbar)
          autoHideDuration={6000}
          message=""
          onClose={[Function]}
          open={false}
        />,
        <WithStyles(CssBaseline) />,
        <div
          className="header"
        >
          <WithStyles(Typography)
            style={
              Object {
                "flex": 1,
              }
            }
            variant="h3"
          >
            Search Restaurants by Zipcode
            <WithStyles(Button)
              onClick={[Function]}
              style={
                Object {
                  "float": "right",
                }
              }
            >
              <pure(ArrowBackIcon) />
              Back
            </WithStyles(Button)>
          </WithStyles(Typography)>
        </div>,
        <WithStyles(Divider) />,
        <WithStyles(Card)
          className="input-paper"
          data-aos="zoom-in-up"
        >
          <WithStyles(CardHeader)
            title="Search All Restaurants by Zipcode"
          />
          <WithStyles(CardContent)>
            <TextField
              className=""
              fullWidth={true}
              inputProps={
                Object {
                  "maxLength": 5,
                  "style": Object {
                    "textAlign": "center",
                  },
                }
              }
              name="zipCode"
              onChange={[Function]}
              placeholder="Enter 5 Digit Zip Code"
              required={true}
              select={false}
              value=""
              variant="standard"
            />
            <div>
              <WithStyles(Button)
                className="input-button"
                color="primary"
                onClick={[Function]}
                style={
                  Object {
                    "fontSize": 11,
                    "marginBottom": 5,
                    "marginLeft": 5,
                    "marginTop": 10,
                  }
                }
                value=""
                variant="contained"
              >
                Search Entered Zip Code
              </WithStyles(Button)>
            </div>
            <div
              className="zip-section"
            >
              <WithStyles(Typography)
                variant="subtitle1"
              />
            </div>
          </WithStyles(CardContent)>
        </WithStyles(Card)>,
      ],
      "style": Object {
        "padding": "3.5% 10.5%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoHideDuration": 6000,
          "message": "",
          "onClose": [Function],
          "open": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <WithStyles(Typography)
            style={
              Object {
                "flex": 1,
              }
            }
            variant="h3"
          >
            Search Restaurants by Zipcode
            <WithStyles(Button)
              onClick={[Function]}
              style={
                Object {
                  "float": "right",
                }
              }
            >
              <pure(ArrowBackIcon) />
              Back
            </WithStyles(Button)>
          </WithStyles(Typography)>,
          "className": "header",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              "Search Restaurants by Zipcode",
              <WithStyles(Button)
                onClick={[Function]}
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <pure(ArrowBackIcon) />
                Back
              </WithStyles(Button)>,
            ],
            "style": Object {
              "flex": 1,
            },
            "variant": "h3",
          },
          "ref": null,
          "rendered": Array [
            "Search Restaurants by Zipcode",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <pure(ArrowBackIcon) />,
                  "Back",
                ],
                "onClick": [Function],
                "style": Object {
                  "float": "right",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "Back",
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(CardHeader)
              title="Search All Restaurants by Zipcode"
            />,
            <WithStyles(CardContent)>
              <TextField
                className=""
                fullWidth={true}
                inputProps={
                  Object {
                    "maxLength": 5,
                    "style": Object {
                      "textAlign": "center",
                    },
                  }
                }
                name="zipCode"
                onChange={[Function]}
                placeholder="Enter 5 Digit Zip Code"
                required={true}
                select={false}
                value=""
                variant="standard"
              />
              <div>
                <WithStyles(Button)
                  className="input-button"
                  color="primary"
                  onClick={[Function]}
                  style={
                    Object {
                      "fontSize": 11,
                      "marginBottom": 5,
                      "marginLeft": 5,
                      "marginTop": 10,
                    }
                  }
                  value=""
                  variant="contained"
                >
                  Search Entered Zip Code
                </WithStyles(Button)>
              </div>
              <div
                className="zip-section"
              >
                <WithStyles(Typography)
                  variant="subtitle1"
                />
              </div>
            </WithStyles(CardContent)>,
          ],
          "className": "input-paper",
          "data-aos": "zoom-in-up",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "title": "Search All Restaurants by Zipcode",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <TextField
                  className=""
                  fullWidth={true}
                  inputProps={
                    Object {
                      "maxLength": 5,
                      "style": Object {
                        "textAlign": "center",
                      },
                    }
                  }
                  name="zipCode"
                  onChange={[Function]}
                  placeholder="Enter 5 Digit Zip Code"
                  required={true}
                  select={false}
                  value=""
                  variant="standard"
                />,
                <div>
                  <WithStyles(Button)
                    className="input-button"
                    color="primary"
                    onClick={[Function]}
                    style={
                      Object {
                        "fontSize": 11,
                        "marginBottom": 5,
                        "marginLeft": 5,
                        "marginTop": 10,
                      }
                    }
                    value=""
                    variant="contained"
                  >
                    Search Entered Zip Code
                  </WithStyles(Button)>
                </div>,
                <div
                  className="zip-section"
                >
                  <WithStyles(Typography)
                    variant="subtitle1"
                  />
                </div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "",
                  "fullWidth": true,
                  "inputProps": Object {
                    "maxLength": 5,
                    "style": Object {
                      "textAlign": "center",
                    },
                  },
                  "name": "zipCode",
                  "onChange": [Function],
                  "placeholder": "Enter 5 Digit Zip Code",
                  "required": true,
                  "select": false,
                  "value": "",
                  "variant": "standard",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <WithStyles(Button)
                    className="input-button"
                    color="primary"
                    onClick={[Function]}
                    style={
                      Object {
                        "fontSize": 11,
                        "marginBottom": 5,
                        "marginLeft": 5,
                        "marginTop": 10,
                      }
                    }
                    value=""
                    variant="contained"
                  >
                    Search Entered Zip Code
                  </WithStyles(Button)>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Search Entered Zip Code",
                    "className": "input-button",
                    "color": "primary",
                    "onClick": [Function],
                    "style": Object {
                      "fontSize": 11,
                      "marginBottom": 5,
                      "marginLeft": 5,
                      "marginTop": 10,
                    },
                    "value": "",
                    "variant": "contained",
                  },
                  "ref": null,
                  "rendered": "Search Entered Zip Code",
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <WithStyles(Typography)
                    variant="subtitle1"
                  />,
                  "className": "zip-section",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": null,
                    "variant": "subtitle1",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <WithStyles(Snackbar)
            autoHideDuration={6000}
            message=""
            onClose={[Function]}
            open={false}
          />,
          <WithStyles(CssBaseline) />,
          <div
            className="header"
          >
            <WithStyles(Typography)
              style={
                Object {
                  "flex": 1,
                }
              }
              variant="h3"
            >
              Search Restaurants by Zipcode
              <WithStyles(Button)
                onClick={[Function]}
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <pure(ArrowBackIcon) />
                Back
              </WithStyles(Button)>
            </WithStyles(Typography)>
          </div>,
          <WithStyles(Divider) />,
          <WithStyles(Card)
            className="input-paper"
            data-aos="zoom-in-up"
          >
            <WithStyles(CardHeader)
              title="Search All Restaurants by Zipcode"
            />
            <WithStyles(CardContent)>
              <TextField
                className=""
                fullWidth={true}
                inputProps={
                  Object {
                    "maxLength": 5,
                    "style": Object {
                      "textAlign": "center",
                    },
                  }
                }
                name="zipCode"
                onChange={[Function]}
                placeholder="Enter 5 Digit Zip Code"
                required={true}
                select={false}
                value=""
                variant="standard"
              />
              <div>
                <WithStyles(Button)
                  className="input-button"
                  color="primary"
                  onClick={[Function]}
                  style={
                    Object {
                      "fontSize": 11,
                      "marginBottom": 5,
                      "marginLeft": 5,
                      "marginTop": 10,
                    }
                  }
                  value=""
                  variant="contained"
                >
                  Search Entered Zip Code
                </WithStyles(Button)>
              </div>
              <div
                className="zip-section"
              >
                <WithStyles(Typography)
                  variant="subtitle1"
                />
              </div>
            </WithStyles(CardContent)>
          </WithStyles(Card)>,
        ],
        "style": Object {
          "padding": "3.5% 10.5%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoHideDuration": 6000,
            "message": "",
            "onClose": [Function],
            "open": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <WithStyles(Typography)
              style={
                Object {
                  "flex": 1,
                }
              }
              variant="h3"
            >
              Search Restaurants by Zipcode
              <WithStyles(Button)
                onClick={[Function]}
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <pure(ArrowBackIcon) />
                Back
              </WithStyles(Button)>
            </WithStyles(Typography)>,
            "className": "header",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "Search Restaurants by Zipcode",
                <WithStyles(Button)
                  onClick={[Function]}
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                >
                  <pure(ArrowBackIcon) />
                  Back
                </WithStyles(Button)>,
              ],
              "style": Object {
                "flex": 1,
              },
              "variant": "h3",
            },
            "ref": null,
            "rendered": Array [
              "Search Restaurants by Zipcode",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <pure(ArrowBackIcon) />,
                    "Back",
                  ],
                  "onClick": [Function],
                  "style": Object {
                    "float": "right",
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "Back",
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(CardHeader)
                title="Search All Restaurants by Zipcode"
              />,
              <WithStyles(CardContent)>
                <TextField
                  className=""
                  fullWidth={true}
                  inputProps={
                    Object {
                      "maxLength": 5,
                      "style": Object {
                        "textAlign": "center",
                      },
                    }
                  }
                  name="zipCode"
                  onChange={[Function]}
                  placeholder="Enter 5 Digit Zip Code"
                  required={true}
                  select={false}
                  value=""
                  variant="standard"
                />
                <div>
                  <WithStyles(Button)
                    className="input-button"
                    color="primary"
                    onClick={[Function]}
                    style={
                      Object {
                        "fontSize": 11,
                        "marginBottom": 5,
                        "marginLeft": 5,
                        "marginTop": 10,
                      }
                    }
                    value=""
                    variant="contained"
                  >
                    Search Entered Zip Code
                  </WithStyles(Button)>
                </div>
                <div
                  className="zip-section"
                >
                  <WithStyles(Typography)
                    variant="subtitle1"
                  />
                </div>
              </WithStyles(CardContent)>,
            ],
            "className": "input-paper",
            "data-aos": "zoom-in-up",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "title": "Search All Restaurants by Zipcode",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <TextField
                    className=""
                    fullWidth={true}
                    inputProps={
                      Object {
                        "maxLength": 5,
                        "style": Object {
                          "textAlign": "center",
                        },
                      }
                    }
                    name="zipCode"
                    onChange={[Function]}
                    placeholder="Enter 5 Digit Zip Code"
                    required={true}
                    select={false}
                    value=""
                    variant="standard"
                  />,
                  <div>
                    <WithStyles(Button)
                      className="input-button"
                      color="primary"
                      onClick={[Function]}
                      style={
                        Object {
                          "fontSize": 11,
                          "marginBottom": 5,
                          "marginLeft": 5,
                          "marginTop": 10,
                        }
                      }
                      value=""
                      variant="contained"
                    >
                      Search Entered Zip Code
                    </WithStyles(Button)>
                  </div>,
                  <div
                    className="zip-section"
                  >
                    <WithStyles(Typography)
                      variant="subtitle1"
                    />
                  </div>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "",
                    "fullWidth": true,
                    "inputProps": Object {
                      "maxLength": 5,
                      "style": Object {
                        "textAlign": "center",
                      },
                    },
                    "name": "zipCode",
                    "onChange": [Function],
                    "placeholder": "Enter 5 Digit Zip Code",
                    "required": true,
                    "select": false,
                    "value": "",
                    "variant": "standard",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <WithStyles(Button)
                      className="input-button"
                      color="primary"
                      onClick={[Function]}
                      style={
                        Object {
                          "fontSize": 11,
                          "marginBottom": 5,
                          "marginLeft": 5,
                          "marginTop": 10,
                        }
                      }
                      value=""
                      variant="contained"
                    >
                      Search Entered Zip Code
                    </WithStyles(Button)>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Search Entered Zip Code",
                      "className": "input-button",
                      "color": "primary",
                      "onClick": [Function],
                      "style": Object {
                        "fontSize": 11,
                        "marginBottom": 5,
                        "marginLeft": 5,
                        "marginTop": 10,
                      },
                      "value": "",
                      "variant": "contained",
                    },
                    "ref": null,
                    "rendered": "Search Entered Zip Code",
                    "type": [Function],
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <WithStyles(Typography)
                      variant="subtitle1"
                    />,
                    "className": "zip-section",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": null,
                      "variant": "subtitle1",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`UserProfile Component When provided with no zip code info Should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Zipcode
    zipcode=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <WithStyles(Snackbar)
          autoHideDuration={6000}
          message=""
          onClose={[Function]}
          open={false}
        />,
        <WithStyles(CssBaseline) />,
        <div
          className="header"
        >
          <WithStyles(Typography)
            style={
              Object {
                "flex": 1,
              }
            }
            variant="h3"
          >
            Search Restaurants by Zipcode
            <WithStyles(Button)
              onClick={[Function]}
              style={
                Object {
                  "float": "right",
                }
              }
            >
              <pure(ArrowBackIcon) />
              Back
            </WithStyles(Button)>
          </WithStyles(Typography)>
        </div>,
        <WithStyles(Divider) />,
        <WithStyles(Card)
          className="input-paper"
          data-aos="zoom-in-up"
        >
          <WithStyles(CardHeader)
            title="Search All Restaurants by Zipcode"
          />
          <WithStyles(CardContent)>
            <TextField
              className=""
              fullWidth={true}
              inputProps={
                Object {
                  "maxLength": 5,
                  "style": Object {
                    "textAlign": "center",
                  },
                }
              }
              name="zipCode"
              onChange={[Function]}
              placeholder="Enter 5 Digit Zip Code"
              required={true}
              select={false}
              value=""
              variant="standard"
            />
            <div>
              <WithStyles(Button)
                className="input-button"
                color="primary"
                onClick={[Function]}
                style={
                  Object {
                    "fontSize": 11,
                    "marginBottom": 5,
                    "marginLeft": 5,
                    "marginTop": 10,
                  }
                }
                value=""
                variant="contained"
              >
                Search Entered Zip Code
              </WithStyles(Button)>
            </div>
            <div
              className="zip-section"
            >
              <WithStyles(Typography)
                variant="subtitle1"
              />
            </div>
          </WithStyles(CardContent)>
        </WithStyles(Card)>,
      ],
      "style": Object {
        "padding": "3.5% 10.5%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoHideDuration": 6000,
          "message": "",
          "onClose": [Function],
          "open": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <WithStyles(Typography)
            style={
              Object {
                "flex": 1,
              }
            }
            variant="h3"
          >
            Search Restaurants by Zipcode
            <WithStyles(Button)
              onClick={[Function]}
              style={
                Object {
                  "float": "right",
                }
              }
            >
              <pure(ArrowBackIcon) />
              Back
            </WithStyles(Button)>
          </WithStyles(Typography)>,
          "className": "header",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              "Search Restaurants by Zipcode",
              <WithStyles(Button)
                onClick={[Function]}
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <pure(ArrowBackIcon) />
                Back
              </WithStyles(Button)>,
            ],
            "style": Object {
              "flex": 1,
            },
            "variant": "h3",
          },
          "ref": null,
          "rendered": Array [
            "Search Restaurants by Zipcode",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <pure(ArrowBackIcon) />,
                  "Back",
                ],
                "onClick": [Function],
                "style": Object {
                  "float": "right",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "Back",
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(CardHeader)
              title="Search All Restaurants by Zipcode"
            />,
            <WithStyles(CardContent)>
              <TextField
                className=""
                fullWidth={true}
                inputProps={
                  Object {
                    "maxLength": 5,
                    "style": Object {
                      "textAlign": "center",
                    },
                  }
                }
                name="zipCode"
                onChange={[Function]}
                placeholder="Enter 5 Digit Zip Code"
                required={true}
                select={false}
                value=""
                variant="standard"
              />
              <div>
                <WithStyles(Button)
                  className="input-button"
                  color="primary"
                  onClick={[Function]}
                  style={
                    Object {
                      "fontSize": 11,
                      "marginBottom": 5,
                      "marginLeft": 5,
                      "marginTop": 10,
                    }
                  }
                  value=""
                  variant="contained"
                >
                  Search Entered Zip Code
                </WithStyles(Button)>
              </div>
              <div
                className="zip-section"
              >
                <WithStyles(Typography)
                  variant="subtitle1"
                />
              </div>
            </WithStyles(CardContent)>,
          ],
          "className": "input-paper",
          "data-aos": "zoom-in-up",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "title": "Search All Restaurants by Zipcode",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <TextField
                  className=""
                  fullWidth={true}
                  inputProps={
                    Object {
                      "maxLength": 5,
                      "style": Object {
                        "textAlign": "center",
                      },
                    }
                  }
                  name="zipCode"
                  onChange={[Function]}
                  placeholder="Enter 5 Digit Zip Code"
                  required={true}
                  select={false}
                  value=""
                  variant="standard"
                />,
                <div>
                  <WithStyles(Button)
                    className="input-button"
                    color="primary"
                    onClick={[Function]}
                    style={
                      Object {
                        "fontSize": 11,
                        "marginBottom": 5,
                        "marginLeft": 5,
                        "marginTop": 10,
                      }
                    }
                    value=""
                    variant="contained"
                  >
                    Search Entered Zip Code
                  </WithStyles(Button)>
                </div>,
                <div
                  className="zip-section"
                >
                  <WithStyles(Typography)
                    variant="subtitle1"
                  />
                </div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "",
                  "fullWidth": true,
                  "inputProps": Object {
                    "maxLength": 5,
                    "style": Object {
                      "textAlign": "center",
                    },
                  },
                  "name": "zipCode",
                  "onChange": [Function],
                  "placeholder": "Enter 5 Digit Zip Code",
                  "required": true,
                  "select": false,
                  "value": "",
                  "variant": "standard",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <WithStyles(Button)
                    className="input-button"
                    color="primary"
                    onClick={[Function]}
                    style={
                      Object {
                        "fontSize": 11,
                        "marginBottom": 5,
                        "marginLeft": 5,
                        "marginTop": 10,
                      }
                    }
                    value=""
                    variant="contained"
                  >
                    Search Entered Zip Code
                  </WithStyles(Button)>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Search Entered Zip Code",
                    "className": "input-button",
                    "color": "primary",
                    "onClick": [Function],
                    "style": Object {
                      "fontSize": 11,
                      "marginBottom": 5,
                      "marginLeft": 5,
                      "marginTop": 10,
                    },
                    "value": "",
                    "variant": "contained",
                  },
                  "ref": null,
                  "rendered": "Search Entered Zip Code",
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <WithStyles(Typography)
                    variant="subtitle1"
                  />,
                  "className": "zip-section",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": null,
                    "variant": "subtitle1",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <WithStyles(Snackbar)
            autoHideDuration={6000}
            message=""
            onClose={[Function]}
            open={false}
          />,
          <WithStyles(CssBaseline) />,
          <div
            className="header"
          >
            <WithStyles(Typography)
              style={
                Object {
                  "flex": 1,
                }
              }
              variant="h3"
            >
              Search Restaurants by Zipcode
              <WithStyles(Button)
                onClick={[Function]}
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <pure(ArrowBackIcon) />
                Back
              </WithStyles(Button)>
            </WithStyles(Typography)>
          </div>,
          <WithStyles(Divider) />,
          <WithStyles(Card)
            className="input-paper"
            data-aos="zoom-in-up"
          >
            <WithStyles(CardHeader)
              title="Search All Restaurants by Zipcode"
            />
            <WithStyles(CardContent)>
              <TextField
                className=""
                fullWidth={true}
                inputProps={
                  Object {
                    "maxLength": 5,
                    "style": Object {
                      "textAlign": "center",
                    },
                  }
                }
                name="zipCode"
                onChange={[Function]}
                placeholder="Enter 5 Digit Zip Code"
                required={true}
                select={false}
                value=""
                variant="standard"
              />
              <div>
                <WithStyles(Button)
                  className="input-button"
                  color="primary"
                  onClick={[Function]}
                  style={
                    Object {
                      "fontSize": 11,
                      "marginBottom": 5,
                      "marginLeft": 5,
                      "marginTop": 10,
                    }
                  }
                  value=""
                  variant="contained"
                >
                  Search Entered Zip Code
                </WithStyles(Button)>
              </div>
              <div
                className="zip-section"
              >
                <WithStyles(Typography)
                  variant="subtitle1"
                />
              </div>
            </WithStyles(CardContent)>
          </WithStyles(Card)>,
        ],
        "style": Object {
          "padding": "3.5% 10.5%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoHideDuration": 6000,
            "message": "",
            "onClose": [Function],
            "open": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <WithStyles(Typography)
              style={
                Object {
                  "flex": 1,
                }
              }
              variant="h3"
            >
              Search Restaurants by Zipcode
              <WithStyles(Button)
                onClick={[Function]}
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <pure(ArrowBackIcon) />
                Back
              </WithStyles(Button)>
            </WithStyles(Typography)>,
            "className": "header",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "Search Restaurants by Zipcode",
                <WithStyles(Button)
                  onClick={[Function]}
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                >
                  <pure(ArrowBackIcon) />
                  Back
                </WithStyles(Button)>,
              ],
              "style": Object {
                "flex": 1,
              },
              "variant": "h3",
            },
            "ref": null,
            "rendered": Array [
              "Search Restaurants by Zipcode",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <pure(ArrowBackIcon) />,
                    "Back",
                  ],
                  "onClick": [Function],
                  "style": Object {
                    "float": "right",
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "Back",
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(CardHeader)
                title="Search All Restaurants by Zipcode"
              />,
              <WithStyles(CardContent)>
                <TextField
                  className=""
                  fullWidth={true}
                  inputProps={
                    Object {
                      "maxLength": 5,
                      "style": Object {
                        "textAlign": "center",
                      },
                    }
                  }
                  name="zipCode"
                  onChange={[Function]}
                  placeholder="Enter 5 Digit Zip Code"
                  required={true}
                  select={false}
                  value=""
                  variant="standard"
                />
                <div>
                  <WithStyles(Button)
                    className="input-button"
                    color="primary"
                    onClick={[Function]}
                    style={
                      Object {
                        "fontSize": 11,
                        "marginBottom": 5,
                        "marginLeft": 5,
                        "marginTop": 10,
                      }
                    }
                    value=""
                    variant="contained"
                  >
                    Search Entered Zip Code
                  </WithStyles(Button)>
                </div>
                <div
                  className="zip-section"
                >
                  <WithStyles(Typography)
                    variant="subtitle1"
                  />
                </div>
              </WithStyles(CardContent)>,
            ],
            "className": "input-paper",
            "data-aos": "zoom-in-up",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "title": "Search All Restaurants by Zipcode",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <TextField
                    className=""
                    fullWidth={true}
                    inputProps={
                      Object {
                        "maxLength": 5,
                        "style": Object {
                          "textAlign": "center",
                        },
                      }
                    }
                    name="zipCode"
                    onChange={[Function]}
                    placeholder="Enter 5 Digit Zip Code"
                    required={true}
                    select={false}
                    value=""
                    variant="standard"
                  />,
                  <div>
                    <WithStyles(Button)
                      className="input-button"
                      color="primary"
                      onClick={[Function]}
                      style={
                        Object {
                          "fontSize": 11,
                          "marginBottom": 5,
                          "marginLeft": 5,
                          "marginTop": 10,
                        }
                      }
                      value=""
                      variant="contained"
                    >
                      Search Entered Zip Code
                    </WithStyles(Button)>
                  </div>,
                  <div
                    className="zip-section"
                  >
                    <WithStyles(Typography)
                      variant="subtitle1"
                    />
                  </div>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "",
                    "fullWidth": true,
                    "inputProps": Object {
                      "maxLength": 5,
                      "style": Object {
                        "textAlign": "center",
                      },
                    },
                    "name": "zipCode",
                    "onChange": [Function],
                    "placeholder": "Enter 5 Digit Zip Code",
                    "required": true,
                    "select": false,
                    "value": "",
                    "variant": "standard",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <WithStyles(Button)
                      className="input-button"
                      color="primary"
                      onClick={[Function]}
                      style={
                        Object {
                          "fontSize": 11,
                          "marginBottom": 5,
                          "marginLeft": 5,
                          "marginTop": 10,
                        }
                      }
                      value=""
                      variant="contained"
                    >
                      Search Entered Zip Code
                    </WithStyles(Button)>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Search Entered Zip Code",
                      "className": "input-button",
                      "color": "primary",
                      "onClick": [Function],
                      "style": Object {
                        "fontSize": 11,
                        "marginBottom": 5,
                        "marginLeft": 5,
                        "marginTop": 10,
                      },
                      "value": "",
                      "variant": "contained",
                    },
                    "ref": null,
                    "rendered": "Search Entered Zip Code",
                    "type": [Function],
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <WithStyles(Typography)
                      variant="subtitle1"
                    />,
                    "className": "zip-section",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": null,
                      "variant": "subtitle1",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`UserProfile Component When provided with zip code info Should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Zipcode
    zipcode="11102"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <WithStyles(Snackbar)
          autoHideDuration={6000}
          message=""
          onClose={[Function]}
          open={false}
        />,
        <WithStyles(CssBaseline) />,
        <div
          className="header"
        >
          <WithStyles(Typography)
            style={
              Object {
                "flex": 1,
              }
            }
            variant="h3"
          >
            Search Restaurants by Zipcode
            <WithStyles(Button)
              onClick={[Function]}
              style={
                Object {
                  "float": "right",
                }
              }
            >
              <pure(ArrowBackIcon) />
              Back
            </WithStyles(Button)>
          </WithStyles(Typography)>
        </div>,
        <WithStyles(Divider) />,
        <WithStyles(Card)
          className="input-paper"
          data-aos="zoom-in-up"
        >
          <WithStyles(CardHeader)
            title="Search All Restaurants by Zipcode"
          />
          <WithStyles(CardContent)>
            <TextField
              className=""
              fullWidth={true}
              inputProps={
                Object {
                  "maxLength": 5,
                  "style": Object {
                    "textAlign": "center",
                  },
                }
              }
              name="zipCode"
              onChange={[Function]}
              placeholder="Enter 5 Digit Zip Code"
              required={true}
              select={false}
              value=""
              variant="standard"
            />
            <div>
              <WithStyles(Button)
                className="input-button"
                color="primary"
                onClick={[Function]}
                style={
                  Object {
                    "fontSize": 11,
                    "marginBottom": 5,
                    "marginLeft": 5,
                    "marginTop": 10,
                  }
                }
                value=""
                variant="contained"
              >
                Search Entered Zip Code
              </WithStyles(Button)>
            </div>
            <div
              className="zip-section"
            >
              <WithStyles(Typography)
                variant="subtitle1"
              />
            </div>
          </WithStyles(CardContent)>
        </WithStyles(Card)>,
      ],
      "style": Object {
        "padding": "3.5% 10.5%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoHideDuration": 6000,
          "message": "",
          "onClose": [Function],
          "open": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <WithStyles(Typography)
            style={
              Object {
                "flex": 1,
              }
            }
            variant="h3"
          >
            Search Restaurants by Zipcode
            <WithStyles(Button)
              onClick={[Function]}
              style={
                Object {
                  "float": "right",
                }
              }
            >
              <pure(ArrowBackIcon) />
              Back
            </WithStyles(Button)>
          </WithStyles(Typography)>,
          "className": "header",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              "Search Restaurants by Zipcode",
              <WithStyles(Button)
                onClick={[Function]}
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <pure(ArrowBackIcon) />
                Back
              </WithStyles(Button)>,
            ],
            "style": Object {
              "flex": 1,
            },
            "variant": "h3",
          },
          "ref": null,
          "rendered": Array [
            "Search Restaurants by Zipcode",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <pure(ArrowBackIcon) />,
                  "Back",
                ],
                "onClick": [Function],
                "style": Object {
                  "float": "right",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "Back",
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(CardHeader)
              title="Search All Restaurants by Zipcode"
            />,
            <WithStyles(CardContent)>
              <TextField
                className=""
                fullWidth={true}
                inputProps={
                  Object {
                    "maxLength": 5,
                    "style": Object {
                      "textAlign": "center",
                    },
                  }
                }
                name="zipCode"
                onChange={[Function]}
                placeholder="Enter 5 Digit Zip Code"
                required={true}
                select={false}
                value=""
                variant="standard"
              />
              <div>
                <WithStyles(Button)
                  className="input-button"
                  color="primary"
                  onClick={[Function]}
                  style={
                    Object {
                      "fontSize": 11,
                      "marginBottom": 5,
                      "marginLeft": 5,
                      "marginTop": 10,
                    }
                  }
                  value=""
                  variant="contained"
                >
                  Search Entered Zip Code
                </WithStyles(Button)>
              </div>
              <div
                className="zip-section"
              >
                <WithStyles(Typography)
                  variant="subtitle1"
                />
              </div>
            </WithStyles(CardContent)>,
          ],
          "className": "input-paper",
          "data-aos": "zoom-in-up",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "title": "Search All Restaurants by Zipcode",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <TextField
                  className=""
                  fullWidth={true}
                  inputProps={
                    Object {
                      "maxLength": 5,
                      "style": Object {
                        "textAlign": "center",
                      },
                    }
                  }
                  name="zipCode"
                  onChange={[Function]}
                  placeholder="Enter 5 Digit Zip Code"
                  required={true}
                  select={false}
                  value=""
                  variant="standard"
                />,
                <div>
                  <WithStyles(Button)
                    className="input-button"
                    color="primary"
                    onClick={[Function]}
                    style={
                      Object {
                        "fontSize": 11,
                        "marginBottom": 5,
                        "marginLeft": 5,
                        "marginTop": 10,
                      }
                    }
                    value=""
                    variant="contained"
                  >
                    Search Entered Zip Code
                  </WithStyles(Button)>
                </div>,
                <div
                  className="zip-section"
                >
                  <WithStyles(Typography)
                    variant="subtitle1"
                  />
                </div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "",
                  "fullWidth": true,
                  "inputProps": Object {
                    "maxLength": 5,
                    "style": Object {
                      "textAlign": "center",
                    },
                  },
                  "name": "zipCode",
                  "onChange": [Function],
                  "placeholder": "Enter 5 Digit Zip Code",
                  "required": true,
                  "select": false,
                  "value": "",
                  "variant": "standard",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <WithStyles(Button)
                    className="input-button"
                    color="primary"
                    onClick={[Function]}
                    style={
                      Object {
                        "fontSize": 11,
                        "marginBottom": 5,
                        "marginLeft": 5,
                        "marginTop": 10,
                      }
                    }
                    value=""
                    variant="contained"
                  >
                    Search Entered Zip Code
                  </WithStyles(Button)>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Search Entered Zip Code",
                    "className": "input-button",
                    "color": "primary",
                    "onClick": [Function],
                    "style": Object {
                      "fontSize": 11,
                      "marginBottom": 5,
                      "marginLeft": 5,
                      "marginTop": 10,
                    },
                    "value": "",
                    "variant": "contained",
                  },
                  "ref": null,
                  "rendered": "Search Entered Zip Code",
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <WithStyles(Typography)
                    variant="subtitle1"
                  />,
                  "className": "zip-section",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": null,
                    "variant": "subtitle1",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <WithStyles(Snackbar)
            autoHideDuration={6000}
            message=""
            onClose={[Function]}
            open={false}
          />,
          <WithStyles(CssBaseline) />,
          <div
            className="header"
          >
            <WithStyles(Typography)
              style={
                Object {
                  "flex": 1,
                }
              }
              variant="h3"
            >
              Search Restaurants by Zipcode
              <WithStyles(Button)
                onClick={[Function]}
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <pure(ArrowBackIcon) />
                Back
              </WithStyles(Button)>
            </WithStyles(Typography)>
          </div>,
          <WithStyles(Divider) />,
          <WithStyles(Card)
            className="input-paper"
            data-aos="zoom-in-up"
          >
            <WithStyles(CardHeader)
              title="Search All Restaurants by Zipcode"
            />
            <WithStyles(CardContent)>
              <TextField
                className=""
                fullWidth={true}
                inputProps={
                  Object {
                    "maxLength": 5,
                    "style": Object {
                      "textAlign": "center",
                    },
                  }
                }
                name="zipCode"
                onChange={[Function]}
                placeholder="Enter 5 Digit Zip Code"
                required={true}
                select={false}
                value=""
                variant="standard"
              />
              <div>
                <WithStyles(Button)
                  className="input-button"
                  color="primary"
                  onClick={[Function]}
                  style={
                    Object {
                      "fontSize": 11,
                      "marginBottom": 5,
                      "marginLeft": 5,
                      "marginTop": 10,
                    }
                  }
                  value=""
                  variant="contained"
                >
                  Search Entered Zip Code
                </WithStyles(Button)>
              </div>
              <div
                className="zip-section"
              >
                <WithStyles(Typography)
                  variant="subtitle1"
                />
              </div>
            </WithStyles(CardContent)>
          </WithStyles(Card)>,
        ],
        "style": Object {
          "padding": "3.5% 10.5%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoHideDuration": 6000,
            "message": "",
            "onClose": [Function],
            "open": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <WithStyles(Typography)
              style={
                Object {
                  "flex": 1,
                }
              }
              variant="h3"
            >
              Search Restaurants by Zipcode
              <WithStyles(Button)
                onClick={[Function]}
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <pure(ArrowBackIcon) />
                Back
              </WithStyles(Button)>
            </WithStyles(Typography)>,
            "className": "header",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "Search Restaurants by Zipcode",
                <WithStyles(Button)
                  onClick={[Function]}
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                >
                  <pure(ArrowBackIcon) />
                  Back
                </WithStyles(Button)>,
              ],
              "style": Object {
                "flex": 1,
              },
              "variant": "h3",
            },
            "ref": null,
            "rendered": Array [
              "Search Restaurants by Zipcode",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <pure(ArrowBackIcon) />,
                    "Back",
                  ],
                  "onClick": [Function],
                  "style": Object {
                    "float": "right",
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "Back",
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(CardHeader)
                title="Search All Restaurants by Zipcode"
              />,
              <WithStyles(CardContent)>
                <TextField
                  className=""
                  fullWidth={true}
                  inputProps={
                    Object {
                      "maxLength": 5,
                      "style": Object {
                        "textAlign": "center",
                      },
                    }
                  }
                  name="zipCode"
                  onChange={[Function]}
                  placeholder="Enter 5 Digit Zip Code"
                  required={true}
                  select={false}
                  value=""
                  variant="standard"
                />
                <div>
                  <WithStyles(Button)
                    className="input-button"
                    color="primary"
                    onClick={[Function]}
                    style={
                      Object {
                        "fontSize": 11,
                        "marginBottom": 5,
                        "marginLeft": 5,
                        "marginTop": 10,
                      }
                    }
                    value=""
                    variant="contained"
                  >
                    Search Entered Zip Code
                  </WithStyles(Button)>
                </div>
                <div
                  className="zip-section"
                >
                  <WithStyles(Typography)
                    variant="subtitle1"
                  />
                </div>
              </WithStyles(CardContent)>,
            ],
            "className": "input-paper",
            "data-aos": "zoom-in-up",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "title": "Search All Restaurants by Zipcode",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <TextField
                    className=""
                    fullWidth={true}
                    inputProps={
                      Object {
                        "maxLength": 5,
                        "style": Object {
                          "textAlign": "center",
                        },
                      }
                    }
                    name="zipCode"
                    onChange={[Function]}
                    placeholder="Enter 5 Digit Zip Code"
                    required={true}
                    select={false}
                    value=""
                    variant="standard"
                  />,
                  <div>
                    <WithStyles(Button)
                      className="input-button"
                      color="primary"
                      onClick={[Function]}
                      style={
                        Object {
                          "fontSize": 11,
                          "marginBottom": 5,
                          "marginLeft": 5,
                          "marginTop": 10,
                        }
                      }
                      value=""
                      variant="contained"
                    >
                      Search Entered Zip Code
                    </WithStyles(Button)>
                  </div>,
                  <div
                    className="zip-section"
                  >
                    <WithStyles(Typography)
                      variant="subtitle1"
                    />
                  </div>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "",
                    "fullWidth": true,
                    "inputProps": Object {
                      "maxLength": 5,
                      "style": Object {
                        "textAlign": "center",
                      },
                    },
                    "name": "zipCode",
                    "onChange": [Function],
                    "placeholder": "Enter 5 Digit Zip Code",
                    "required": true,
                    "select": false,
                    "value": "",
                    "variant": "standard",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <WithStyles(Button)
                      className="input-button"
                      color="primary"
                      onClick={[Function]}
                      style={
                        Object {
                          "fontSize": 11,
                          "marginBottom": 5,
                          "marginLeft": 5,
                          "marginTop": 10,
                        }
                      }
                      value=""
                      variant="contained"
                    >
                      Search Entered Zip Code
                    </WithStyles(Button)>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Search Entered Zip Code",
                      "className": "input-button",
                      "color": "primary",
                      "onClick": [Function],
                      "style": Object {
                        "fontSize": 11,
                        "marginBottom": 5,
                        "marginLeft": 5,
                        "marginTop": 10,
                      },
                      "value": "",
                      "variant": "contained",
                    },
                    "ref": null,
                    "rendered": "Search Entered Zip Code",
                    "type": [Function],
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <WithStyles(Typography)
                      variant="subtitle1"
                    />,
                    "className": "zip-section",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": null,
                      "variant": "subtitle1",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
